--- a/src/Orchard.Web/Themes/TheAdmin/Assets/Theme/Less/orchard-widgets.less
+++ b/src/Orchard.Web/Themes/TheAdmin/Assets/Theme/Less/orchard-widgets.less
@@ -1,11 +1,17 @@
 ﻿.orchard-widgets {
+    #widgets-layer-add{
+        height:36px;
+        vertical-align:middle;
+    }
     .button, a.button, #widgets-layer-add a {
         padding: 8px 12px;
+        height:36px;
     }
 
     #widgets-layers-control {
-        fieldset {
+        fieldset, form {
             display: inline-block;
+            height:auto;
         }
 
         label {
